--- a/rootdir/etc/init.mt6592.rc
+++ b/rootdir/etc/init.mt6592.rc
@@ -107,6 +107,9 @@ on post-fs-data
     # Modem related device nodes
     mkdir /data/nvram/md  2770 root nvram
 
+    # Radio
+    mkdir /dev/radio 0770 radio radio
+
     # CCCI
     chown radio radio /sys/kernel/ccci/boot
     chown radio radio /dev/ccci_fs
