--- a/rootdir/etc/init.mt6592.rc
+++ b/rootdir/etc/init.mt6592.rc
@@ -48,31 +48,12 @@ on init
     chown root system /proc/lk_env
     chmod 0660 /proc/lk_env
 
-    # Emulated Storage
-    mkdir /mnt/shell 0700 shell shell
-    chmod 0750 /mnt/shell
-    chown shell sdcard_r /mnt/shell
-    mkdir /mnt/shell/emulated 0700 shell shell
-    mkdir /mnt/shell/emulated/0 0700 shell shell
-    mkdir /storage/emulated 0555 shell shell
-    mkdir /mnt/media_rw/sdcard1 0700 media_rw media_rw
-    mkdir /storage/sdcard1 0700 shell shell
-
-    # Storage exports
-    export EXTERNAL_STORAGE /storage/emulated/legacy
-    export EMULATED_STORAGE_SOURCE /mnt/shell/emulated
-    export EMULATED_STORAGE_TARGET /storage/emulated
-
-    # Mount Emulated Storage
-    mount tmpfs tmpfs /storage/emulated mode=0755,uid=1023,gid=1023
-    
+    # See storage config details at http://source.android.com/tech/storage/
+    mkdir /storage/sdcard 0555 root root
+ 
     # Support legacy paths
-    symlink /storage/emulated/legacy /sdcard
-    symlink /storage/emulated/legacy /mnt/sdcard
-    symlink /storage/emulated/legacy /storage/sdcard0
-    symlink /mnt/shell/emulated/0 /storage/emulated/legacy
-    symlink /mnt/shell/emulated/0 /storage/emulated/0
-    symlink /storage/sdcard1 /mnt/sdcard2
+    symlink /storage/sdcard /sdcard
+    symlink /storage/sdcard /mnt/sdcard
 
     # USB OTG
     mkdir /storage/usbotg 0700 root root
