--- a/rootdir/etc/init.mt6592.rc
+++ b/rootdir/etc/init.mt6592.rc
@@ -475,8 +475,8 @@ on post-fs-data
     chown root system /mtd@misc
 
     # Concurrency scenario
-    chmod 0664 /sys/bus/platform/drivers/mem_bw_ctrl/concurrency_scenario
-    chown system media /sys/bus/platform/drivers/mem_bw_ctrl/concurrency_scenario
+    chmod 0666 /sys/bus/platform/drivers/mem_bw_ctrl/concurrency_scenario
+    chown media system /sys/bus/platform/drivers/mem_bw_ctrl/concurrency_scenario
 
     # SCHED
     chmod 0660 /dev/mtk_sched
