--- a/rootdir/etc/ueventd.mt6592.rc
+++ b/rootdir/etc/ueventd.mt6592.rc
@@ -17,7 +17,7 @@
 /dev/dkb                  0660   root       system
 /dev/seccfg               0660   root       system
 /dev/pro_info             0660	 root	    system
-/dev/otp 		  0660	 root	    nvram
+/dev/otp 		  0660	 root	    radio
 /dev/nvram 		   0660	 root	    system
 /dev/misc		   0660	 root	    system
 /dev/block/mmcblk0	   0660	 root	    system
