--- a/rootdir/etc/init.mt6592.rc
+++ b/rootdir/etc/init.mt6592.rc
@@ -411,6 +411,7 @@ on post-fs-data
     chmod 0660 /dev/kd_camera_hw_bus2
     chmod 0660 /dev/FM50AF
     chmod 0660 /dev/DW9718AF
+    chmod 0660 /dev/BU6424AF
     chmod 0660 /dev/OV8825AF
     chmod 0660 /dev/CAM_CAL_DRV
 
@@ -422,6 +423,7 @@ on post-fs-data
     chown system camera /dev/kd_camera_hw_bus2
     chown system camera /dev/FM50AF
     chown system camera /dev/DW9718AF
+    chown system camera /dev/BU6424AF
     chown system camera /dev/OV8825AF
     chown system camera /dev/CAM_CAL_DRV
 
