--- a/rootdir/etc/init.mt6592.rc
+++ b/rootdir/etc/init.mt6592.rc
@@ -13,6 +13,12 @@ on early-init
     mount debugfs debugfs /sys/kernel/debug
     chmod 0755 /sys/kernel/debug
 
+    # Swap parameters
+    write /proc/sys/vm/swappiness 100
+    write /proc/sys/vm/dirty_ratio 20
+    write /proc/sys/vm/dirty_background_ratio 15
+    write /proc/sys/vm/vfs_cache_pressure 50
+
 on charger
     mount ext4 /emmc@android /system ro wait
     start drvbd
@@ -65,6 +71,9 @@ on init
 on fs
     # Mount
     mount_all /fstab.mt6592
+
+    # Swap
+    swapon_all /fstab.mt6592
 
     # Fuse
     setprop ro.crypto.fuse_sdcard true
@@ -1031,10 +1040,6 @@ service bootanim /system/bin/bootanimation
     user graphics
     group graphics media
     disabled
-    oneshot
-
-service enableswap /system/bin/sh /enableswap.sh
-    class core
     oneshot
 
 service mtkbt /system/bin/mtkbt
