--- a/rootdir/etc/init.mt6592.rc
+++ b/rootdir/etc/init.mt6592.rc
@@ -61,12 +61,15 @@ on init
     mkdir /storage/sdcard 0555 root root
  
     # Support legacy paths
-    symlink /storage/sdcard /sdcard
-    symlink /storage/sdcard /mnt/sdcard
+    symlink /sdcard /mnt/sdcard
+    symlink /sdcard /storage/sdcard0
 
     # USB OTG
     mkdir /storage/usbotg 0700 root root
     mkdir /mnt/media_rw/usbotg 0700 media_rw media_rw
+
+    # By default, primary storage is physical
+    setprop ro.vold.primary_physical 1
 
 on fs
     # Mount
