--- a/rootdir/etc/init.mt6592.rc
+++ b/rootdir/etc/init.mt6592.rc
@@ -10,6 +10,9 @@ on early-init
     mkdir /protect_f 0771 system system
     mkdir /protect_s 0771 system system
 
+    # Misc
+    mkdir /misc 0771 system system
+
     mount debugfs debugfs /sys/kernel/debug
     chmod 0755 /sys/kernel/debug
 
