--- a/rootdir/etc/init.mt6592.rc
+++ b/rootdir/etc/init.mt6592.rc
@@ -397,8 +397,8 @@ on post-fs-data
     chmod 0664 /dev/TV-out
 
     # HDMI
-    chown meida system /dev/hdmitx
-    chmod 0660 /dev/hdmitx
+    chown media system /dev/hdmitx
+    chmod 0666 /dev/hdmitx
 
     # JPEG
     chmod 0440 /dev/mtk_jpeg
