--- a/configs/audio/audio_policy.conf
+++ b/configs/audio/audio_policy.conf
@@ -7,9 +7,9 @@
 # Devices are designated by a string that corresponds to the enum in audio.h
 
 global_configuration {
-  attached_output_devices AUDIO_DEVICE_OUT_SPEAKER|AUDIO_DEVICE_OUT_EARPIECE
+  attached_output_devices AUDIO_DEVICE_OUT_SPEAKER|AUDIO_DEVICE_OUT_EARPIECE|AUDIO_DEVICE_OUT_TELEPHONY_TX
   default_output_device AUDIO_DEVICE_OUT_SPEAKER
-  attached_input_devices AUDIO_DEVICE_IN_BUILTIN_MIC|AUDIO_DEVICE_IN_REMOTE_SUBMIX|AUDIO_DEVICE_IN_FM_TUNER
+  attached_input_devices AUDIO_DEVICE_IN_BUILTIN_MIC|AUDIO_DEVICE_IN_BACK_MIC|AUDIO_DEVICE_IN_REMOTE_SUBMIX|AUDIO_DEVICE_IN_VOICE_CALL|AUDIO_DEVICE_IN_TELEPHONY_RX|AUDIO_DEVICE_IN_FM_TUNER
 }
 
 # audio hardware module section: contains descriptors for all audio hw modules present on the
@@ -71,7 +71,7 @@ audio_hw_modules {
   }
   r_submix {
     outputs {
-      r_submix {
+      submix {
         sampling_rates 48000
         channel_masks AUDIO_CHANNEL_OUT_STEREO
         formats AUDIO_FORMAT_PCM_16_BIT
@@ -79,7 +79,7 @@ audio_hw_modules {
       }
     }
     inputs {
-      r_submix {
+      submix {
         sampling_rates 48000
         channel_masks AUDIO_CHANNEL_IN_STEREO
         formats AUDIO_FORMAT_PCM_16_BIT
